# agentic_prototyping

./: .env.sample  .mcp.notion.json  README.md  clean_database.py  get_notion_tasks.py  get_notion_tasks_temp.py  pyproject.toml
.claude/commands/: build.md  clean_worktree.md  get_notion_tasks.md  hi.md  init_worktree.md  prime.md  update_notion_task.md  update_notion_task_with_file.md
.claude/hooks/: notification.py  pre-tool-use-hook.sh  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
.claude/hooks/utils/: summarizer.py
.claude/hooks/utils/llm/: anth.py  oai.py
.claude/hooks/utils/tts/: elevenlabs_tts.py  openai_tts.py
adws/: adw_build_update_notion_task.py  adw_get_notion_tasks.py  adw_plan_implement_update_notion_task.py  adw_prompt.py  adw_slash_command.py
adws/adw_modules/: agent.py  data_models.py  utils.py
adws/adw_triggers/: adw_trigger_cron_notion_tasks.py
scripts/: prune_worktrees.sh
