[project]
name = "agentic-prototyping"
version = "0.1.0"
description = "Multi-Agent Notion-Based Rapid Prototyping System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "schedule>=1.2.0",
    "requests>=2.32.5",
    "psutil>=7.1.2",
    "typing>=3.10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adws"]

[tool.uv]
dependency-groups = {}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
